--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
             <artifactId>jmockit</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.4</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
