--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ga.guicearmory.gini</groupId>
     <artifactId>gini</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>1.0-RC</version>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
