--- a/src/test/resources/file.test.properties
+++ b/src/test/resources/file.test.properties
@@ -2,3 +2,5 @@ test.key.1=3
 test.key.2=three
 test.key.date=date:[dd-MM-yyyy]01-01-2015
 test.key.date2=date:[yyyy-MM-dd'T'HH:mm:ss.SSSZ]2014-12-30T12:08:56.111-0700
+test.key.uri=uri:http://stacktrace.tk
+test.key.file=dir:/temp/gini/test.test
